k8s/massbank3-similarity-service-cosine.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: massbank3-similarity-service-cosine-deployment # Name des Deployments für uns Nutzer
  namespace: massbank3
  labels:
    app: massbank3-similarity-service-cosine # Labels des Deployments
spec:
  replicas: 1
  selector:
    matchLabels:
      app: massbank3-similarity-service-cosine # Welche Container gehören zum Deployment? (*)
  template:
    metadata:
      labels:
        app: massbank3-similarity-service-cosine # Label des Pods muss/ sollte mit (*) übereinstimmen
    spec:
      containers:
        - name: massbank3-similarity-service-cosine
          image: quay.io/massbank/massbank3-similarity-service:v1.0-matchms-0.28.2 # Container Image
          volumeMounts:
            - mountPath: /msp
              name: massbank3-similarity-service-cosine-volume
      volumes:
        - name: massbank3-similarity-service-cosine-volume
          emptyDir: { }
---
apiVersion: v1
kind: Service
metadata:
  name: massbank3-similarity-service-cosine-service
  namespace: massbank3
spec:
  type: NodePort
  selector:
    app: massbank3-similarity-service-cosine # Das gleiche Label wie im Deployment
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
