k8s/postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: massbank3-postgres-deployment # Name des Deployments für uns Nutzer
  namespace: massbank3
  labels:
    app: massbank3-postgres # Labels des Deployments
spec:
  replicas: 1
  selector:
    matchLabels:
      app: massbank3-postgres # Welche Container gehören zum Deployment? (*)
  template:
    metadata:
      labels:
        app: massbank3-postgres  # Label des Pods muss/ sollte mit (*) übereinstimmen
    spec:
      containers:
        - name: massbank3-postgres
          image: 'quay.io/massbank/postgres-bingo:v15-bingo-1.26.0'
          imagePullPolicy: Always
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgresdata
            - mountPath: "/docker-entrypoint-initdb.d/init.sh"
              name: bingo-init
              subPath: "init.sh"
      volumes:
        - name: postgresdata
          persistentVolumeClaim:
            claimName: massbank3-postgres-volume-claim
        - name: bingo-init
          configMap:
            name: massbank3-bingo-init
            defaultMode: 0555
---
apiVersion: v1
kind: Service
metadata:
  name: massbank3-postgres-service
  labels:
    app: massbank3-postgres
spec:
  type: NodePort
  selector:
    app: massbank3-postgres
  ports:
    - port: 5432
