k8s/massbank3-export-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: massbank3-export-service-deployment # Name des Deployments für uns Nutzer
  namespace: massbank3
  labels:
    app: massbank3-export-service # Labels des Deployments
spec:
  replicas: 1
  selector:
    matchLabels:
      app: massbank3-export-service # Welche Container gehören zum Deployment? (*)
  template:
    metadata:
      labels:
        app: massbank3-export-service # Label des Pods muss/ sollte mit (*) übereinstimmen
    spec:
      containers:
        - name: massbank3-export-service
          image: quay.io/massbank/massbank3-export-service:v1.0 # Container Image
          volumeMounts:
            - mountPath: /MassBank-data
              name: massbank3-export-service-volume
      volumes:
        - name: massbank3-export-service-volume
          emptyDir: { }
---
apiVersion: v1
kind: Service
metadata:
  name: massbank3-export-service-service
  namespace: massbank3
spec:
  type: NodePort
  selector:
    app: massbank3-export-service # Das gleiche Label wie im Deployment
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: massbank3-export-service
  name: massbank3-export-service-ingress
  namespace: massbank3
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: msbi.ipb-halle.de
      http:
        paths:
          - backend:
              service:
                name: massbank3-export-service-service
                port:
                  number: 8080
            path: /MassBank3-export(/|$)(.*)
            pathType: ImplementationSpecific
