k8s/massbank3-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: massbank3-server-deployment # Name des Deployments für uns Nutzer
  namespace: massbank3
  labels:
    app: massbank3-server # Labels des Deployments
spec:
  replicas: 1
  selector:
    matchLabels:
      app: massbank3-server # Welche Container gehören zum Deployment? (*)
  template:
    metadata:
      labels:
        app: massbank3-server  # Label des Pods muss/ sollte mit (*) übereinstimmen
    spec:
      containers:
        - name: massbank3-server
          image: ipbhalle/massbank3-server:dev  # Container Image
          imagePullPolicy: IfNotPresent
---
apiVersion: v1
kind: Service
metadata:
  name: massbank3-server-service
  namespace: massbank3
spec:
  type: NodePort
  selector:
    app: massbank3-server # Das gleiche Label wie im Deployment
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: massbank3-server
  name: massbank3-server-ingress
  namespace: massbank3
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: msbi.ipb-halle.de
      http:
        paths:
          - backend:
              service:
                name: massbank3-server-service
                port:
                  number: 8080
            path: /MassBank3-api(/|$)(.*)
            pathType: ImplementationSpecific
